pymvpa2 (2.0.0-1) unstable; urgency=low

  * Long-awaited upstream release of mvpa2
  * Removed conflict with python-mvpa-lib -- both python-mvpa and python-mvpa2
    must be co-installable now

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 15 Dec 2011 18:32:02 -0500

pymvpa2 (2.0.0~rc5-1) unstable; urgency=low

  * mvpa module was renamed into mvpa2 to allow co-installability with
    stable mvpa 0.4.x (hence source package name change)
  * Command line tools (atlaslabeler, mvpa-prep-fmri) are not provided
    for this release
  * Bump Standards-Version to 3.9.2 -- no changes necessary

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 19 Oct 2011 14:18:14 -0400

pymvpa-snapshot (0.6.0~rc4-1) neurodebian; urgency=low

  * PyMVPA development snapshot.
  * Pruned unneeded now XS-DM-Upload-Allowed.

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 14 Jun 2011 21:03:07 -0400

pymvpa-snapshot (0.6.0~rc3-1) neurodebian; urgency=low

  * PyMVPA development snapshot.
  * Includes upstream changelog now.

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 12 Apr 2011 12:08:15 -0400

pymvpa-snapshot (0.6.0~rc2-1) neurodebian; urgency=low

  * PyMVPA development snapshot.

 -- Michael Hanke <mih@debian.org>  Thu, 03 Mar 2011 16:06:46 -0500

pymvpa (0.4.3-2) unstable; urgency=low

  [ Sandro Tosi ]
  * Drop Python 2.4; thanks to Luca Falavigna for the
    report and to Jakub Wilk for the patch (Closes: #562482)
    - debian/control
      + bump b-d on python-all-dev to '>= 2.5'
      + drop python-ctypes
      + drop explicit Depends on python: we use ${python:Depends}
    - debian/pyversions
      + bump it to '+2.5-'

  [ Yaroslav Halchenko ]
  * debian/control
    - Thanks Sandro Tosi for NMU attempt to fix #560606.
    - Build-Conflict on python-epydoc=3.0.1-4: this version works
    incorrectly with python-docutils 0.6 (thanks to Lucas Nussbaum for the
    report).  Also Build-Depends on python-docutils (<< 0.6) |