@@ -3,7 +3,17 @@ Section: python
 Priority: optional
 Maintainer: NeuroDebian team <team@neuro.debian.net>
 Uploaders: Michael Hanke <mih@debian.org>, Yaroslav Halchenko <debian@onerussian.com>
-Build-Depends: debhelper (>= 7.0.50~), swig, python-all-dev (>= 2.4), python-support (>= 0.6), python-numpy, libsvm-dev (>= 2.84.0), help2man, python-lxml, python-nibabel, python-nose, python-h5py, python-scipy
+Build-Depends: debhelper (>= 7.0.50~),
+               python-all-dev (>= 2.4), python-support (>= 0.6), swig,
+               python-numpy, python-scipy,
+               python-nibabel,
+               python-nose,
+               python-h5py,
+               python-lxml,
+               libsvm-dev (>= 2.84.0),
+               help2man,
+               python-sphinx,
+               graphviz,
 Standards-Version: 3.9.2
 Homepage: http://www.pymvpa.org
 Vcs-Browser: http://git.debian.org/?p=pkg-exppsy/pymvpa.git
@@ -16,7 +26,7 @@ Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
 Recommends: python-nibabel, python-psyco, python-mdp, python-scipy, shogun-python-modular, python-pywt, python-matplotlib, python-reportlab, python-h5py, python-psutil
 Suggests: fslview, fsl, python-nose, python-lxml, python-openopt, python-rpy2, python-mvpa2-doc, python-sklearn
-Description: multivariate pattern analysis with Python
+Description: multivariate pattern analysis with Python v. 2
  PyMVPA eases pattern classification analyses of large datasets, with an
  accent on neuroimaging. It provides high-level abstraction of typical
  processing steps (e.g. data preparation, classification, feature selection,
@@ -37,10 +47,19 @@ Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}, python-numpy
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
-Description: low-level implementations and bindings for PyMVPA
+Description: low-level implementations and bindings for PyMVPA v. 2
  This is an add-on package for the PyMVPA framework. It provides a low-level
  implementation of an SMLR classifier and custom Python bindings for the LIBSVM
  library.
  .
  This is a package of a development snapshot. The latest released version is
  provided by the python-mvpa-lib package.
+
+Package: python-mvpa2-doc
+Architecture: all
+Section: doc
+Depends: ${misc:Depends}, libjs-jquery
+Suggests: python-mvpa2
+Description: documentation and examples for PyMVPA v. 2
+ This is an add-on package for the PyMVPA framework. It provides a
+ HTML documentation (tutorial, FAQ etc.) as well as example scripts.
