@@ -1,0 +1,1 @@
+usr/share/javascript/jquery/jquery.js usr/share/doc/python-mvpa2-doc/html/_static/jquery.js
